fix(front): small spacing fixes

--- a/redi-connect-front/src/components/molecules/Editable.scss
+++ b/redi-connect-front/src/components/molecules/Editable.scss
@@ -4,7 +4,6 @@
   &__header {
     display: flex;
     justify-content: space-between;
-    margin-bottom: -1rem;
   }
 }
 
