--- a/redi-connect-front/src/styles/_variables.scss
+++ b/redi-connect-front/src/styles/_variables.scss
@@ -54,7 +54,7 @@ $desktop: 1192px; // 1128px + 2x32px (2xgutter)
 $widescreen-enabled: false;
 $fullhd-enabled: false;
 $column-gap: 1em;
-$block-spacing: 2rem;
+$block-spacing: 1rem;
 $section-padding: 1rem 1.25rem;
 $section-padding-medium: 3.25rem 1.25rem;
 
